package range.db;

message GraphList {
	repeated string name = 1;
}
